changed addressing for main and swagger
